@@ -38,6 +38,8 @@ Version 1.7.2
        "show only affected paths" is active. (Stefan)
 - CHG: Issue #134: Show cached overlays
        for blocked paths. (Stefan)
+- BUG: Issue #136: SubWCRev can use wrong
+       casing for relative paths. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
